<resources>
    <string name="app_name">Prescript</string>
    <string name="nome_do_remedio">Nome do Remédio</string>
    <string name="nome_do_laboratorio">Nome do Laboratório</string>
    <string name="principio_ativo">Princípio Ativo</string>
    <string name="quantidade">Quantidade</string>
    <string name="button_save">Salvar</string>
    <string name="cadastro_de_medicamentos">Cadastro de Medicamentos</string>

    <string name="medicine_inserted_successfully">O Medicamento foi inserido com sucesso</string>
    <string name="medicine_error_to_insert">Houve um erro ao tentar inserir um Medicamento</string>
    <string name="lista_de_medicamentos">Lista de Medicamentos</string>
    <string name="medicine_button_update">Atualizar</string>
    <string name="medicine_updated_successfully">"O medicamento foi atualizado com sucesso! "</string>
    <string name="medicine_error_to_update">Houve um erro ao atualizar o Medicamento</string>
    <string name="medicine_deleted_successfully">"O medicamento foi deletado com sucesso! "</string>
    <string name="medicine_error_to_deleted">Houve um erro ao deletar o Medicamento</string>
    <string name="button_delete">Deletar</string>
    <string name="bt_select_image">Selecionar Imagem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="sign_up">Cadastrar</string>
    <string name="prescript">PRESCRIPT</string>
    <string name="enviar">Enviar</string>
    <string name="cadastro_de_exames">Cadastro de Exames</string>
</resources>