<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.medicine.MedicineFragment">

    <!--<ImageView
        android:id="@+id/iv_image_medicine_selected"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_photo"
        app:layout_constraintTop_toBottomOf="@id/iv_image_medicine_selected"
        app:layout_constraintEnd_toEndOf="parent"
        />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_email"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_email_user"
        app:layout_constraintStart_toStartOf="@+id/input_layout_email_user"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/button_add_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_password_user"
        app:layout_constraintStart_toStartOf="@+id/input_layout_password_user"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password_user"
        />

    <Button
        android:id="@+id/button_delete_medicine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/darkRed"
        android:text="@string/button_delete"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_password_user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/input_layout_password_user"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_password_user"
        app:layout_constraintVertical_bias="0.975"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>