<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="24dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/gray"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_star"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_margin="16dp"
                android:focusable="true"/>

            <ImageView
                android:id="@+id/iv_image_medicine"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/medicine"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/tv_name_medicine"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/iv_image_medicine"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/nome_do_remedio"
                />

            <TextView
                android:id="@+id/tv_name_medicine_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/iv_image_medicine"
                app:layout_constraintStart_toEndOf="@id/tv_name_medicine"
                android:text="Cefaliv"
                />

            <TextView
                android:id="@+id/tv_name_lab"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_name_medicine_value"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/nome_do_laboratorio"
                />

            <TextView
                android:id="@+id/tv_name_lab_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name_medicine_value"
                app:layout_constraintStart_toEndOf="@id/tv_name_lab"
                android:text="Aché"
                />

            <TextView
                android:id="@+id/tv_active_principle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_name_lab_value"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/principio_ativo"
                />

            <TextView
                android:id="@+id/tv_active_principle_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name_lab_value"
                app:layout_constraintStart_toEndOf="@id/tv_active_principle"
                android:text="Cefaliv Mesilato de Di-Hidroergotamina 1mg + Dipirona Monoidratada 350mg + Cafeína 100mg 12 comprimidos"
                />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/tv_active_principle_value"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/quantidade"
                />

            <TextView
                android:id="@+id/tv_quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_active_principle_value"
                app:layout_constraintStart_toEndOf="@id/tv_quantity"
                android:text="10"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_content"
                android:layout_marginBottom="16dp"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>